--- a/app/src/main/res/navigation/app_navigation.xml
+++ b/app/src/main/res/navigation/app_navigation.xml
@@ -15,6 +15,9 @@
         <action
             android:id="@+id/action_loginFragment_to_meusJogosFragment"
             app:destination="@id/meusJogosFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_recuperarSenhaFragment"
+            app:destination="@id/recuperarSenhaFragment" />
     </fragment>
     <fragment
         android:id="@+id/cadastroFragment"
@@ -92,5 +95,13 @@
         <action
             android:id="@+id/action_historicoFragment_to_perfilFragment"
             app:destination="@id/perfilFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/recuperarSenhaFragment"
+        android:name="br.edu.ufabc.isports.RecuperarSenhaFragment"
+        android:label="RecuperarSenhaFragment" >
+        <action
+            android:id="@+id/action_recuperarSenhaFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
     </fragment>
 </navigation>
