--- a/app/src/main/res/layout/fragment_explorar.xml
+++ b/app/src/main/res/layout/fragment_explorar.xml
@@ -130,16 +130,23 @@
         android:text="@string/explorar_filtrar_button_text"
         app:layout_constraintEnd_toEndOf="@+id/explorar_time_Ate"
         app:layout_constraintTop_toBottomOf="@+id/explorar_time_Ate" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview_jogos"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/explorar_filtrar_button" />
+        app:layout_constraintTop_toBottomOf="@id/explorar_filtrar_button"
+        app:layout_constraintBottom_toTopOf="@id/bottom_navigation_explorar">
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerview_jogos"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/explorar_filtrar_button" />
+    </ScrollView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_add_jogo"
