--- a/app/src/main/res/layout/fragment_meus_jogos.xml
+++ b/app/src/main/res/layout/fragment_meus_jogos.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MeusJogosFragment"
+    tools:context=".view.MeusJogosFragment"
     android:background="@color/black_tint_30">
 
     <TextView
