Passando NovoJogoFragment para o padrão liveCicyle

--- a/app/src/main/res/navigation/app_navigation.xml
+++ b/app/src/main/res/navigation/app_navigation.xml
@@ -114,7 +114,7 @@
         tools:layout="@layout/fragment_jogos_details" >
         <argument
             android:name="jogoItem"
-            app:argType="br.edu.ufabc.isports.model.JogoFirestore"
+            app:argType="br.edu.ufabc.isports.model.Jogo"
             app:nullable="true" />
     </fragment>
 </navigation>
