--- a/app/src/main/res/layout/fragment_jogos_details.xml
+++ b/app/src/main/res/layout/fragment_jogos_details.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,25 +8,78 @@
     android:background="@color/black_tint_30" >
 
     <TextView
-        android:id="@+id/jogo_id"
-        android:layout_width="match_parent"
+        android:id="@+id/modalidade"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:textAlignment="center"
+        android:text="@string/modalidade"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_alignParentTop="true" />
+
+    <ImageView
+        android:id="@+id/notes_list_favorites"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
+        android:contentDescription="@string/modalidade_icone"
+        android:src="@drawable/ic_baseline_sports_soccer"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        app:tint="@color/white"/>
+
+    <TextView
+        android:id="@+id/inicio"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/modalidade"
+        android:text="@string/inicio"
+        android:textAlignment="center"
+        android:textColor="@color/white" />
+    <TextView
+        android:id="@+id/fim"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/modalidade"
+        android:layout_toEndOf="@id/inicio"
+        android:layout_marginStart="30dp"
+        android:text="@string/fim"
+        android:textAlignment="center"
+        android:textColor="@color/white" />
+
+    <TextView
+        android:id="@+id/local"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/inicio"
+        android:text="@string/local"
+        android:layout_alignParentStart="true"
+        android:textAlignment="center"
+        android:textColor="@color/white" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/fab_participar"
+        android:layout_below="@id/local">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerview_participantes"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+    </ScrollView>
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/fab_participar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="40dp"
+        android:layout_centerHorizontal="true"
         android:text="@string/fab_participar_text"
         android:contentDescription="@string/fab_historic_description"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_alignParentBottom="true" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
