--- a/app/src/main/res/navigation/app_navigation.xml
+++ b/app/src/main/res/navigation/app_navigation.xml
@@ -44,7 +44,9 @@
             app:destination="@id/novoJogoFragment" />
         <action
             android:id="@+id/onClickItem"
-            app:destination="@id/jogosDetailsFragment" />
+            app:destination="@id/jogosDetailsFragment"
+            app:popUpTo="@id/explorarFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/meusJogosFragment"
@@ -60,6 +62,11 @@
         <action
             android:id="@+id/action_meusJogosFragment_to_historicoFragment"
             app:destination="@id/historicoFragment" />
+        <action
+            android:id="@+id/onClickItemMeusJogos"
+            app:destination="@id/jogosDetailsFragment"
+            app:popUpTo="@id/meusJogosFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/perfilFragment"
@@ -98,6 +105,11 @@
         <action
             android:id="@+id/action_historicoFragment_to_perfilFragment"
             app:destination="@id/perfilFragment" />
+        <action
+            android:id="@+id/onClickItemHistorico"
+            app:destination="@id/jogosDetailsFragment"
+            app:popUpTo="@id/historicoFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/recuperarSenhaFragment"
