Ajustes nos diretorios da model e criação do DTO para auxiliar na passagem dos objetos do Firestore para os objects utilizados no código

--- a/app/src/main/res/navigation/app_navigation.xml
+++ b/app/src/main/res/navigation/app_navigation.xml
@@ -126,7 +126,7 @@
         tools:layout="@layout/fragment_jogos_details" >
         <argument
             android:name="jogoItem"
-            app:argType="br.edu.ufabc.isports.model.Jogo"
+            app:argType="br.edu.ufabc.isports.model.objects.Jogo"
             app:nullable="true" />
         <action
             android:id="@+id/action_jogosDetailsFragment_to_explorarFragment"
